--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
     overflow:hidden;
     height:100vh;
     background-image:url('images/promo.jpg');
-    background-attachment:fixed;
+    background-attachment:fixed !important;
     background-position:center;
     background-repeat:no-repeat;
     background-color:white;
@@ -322,7 +322,7 @@ footer{
    #about{
         background-position-x:0;
         background-position-y:0; 
-	background-attachment:scroll;
+	background-attachment:fixed !important;
     }
 
     #banner #personal-details img{
