--- a/style.css
+++ b/style.css
@@ -1,502 +1,7 @@
-body {
-    margin:0;
-    padding:0;
-    font-family:lato;
-    overflow-x:hidden;
-}
-
-@media screen and (max-width: 1280px)
-{
-    #banner{
-        height: 100vh;
-    }
-}
-
-
-#banner
-{
-    height:120vh;
-    background-image:url('images/banner.jpg');
-    background-size:cover;
-    background-position:center;
-    background-attachment:fixed;
-    padding-bottom: 10em;
-    box-sizing:border-box; 
-}
-
-@keyframes zoom{
-    50%{transform:scale(2);}
-    100%{transform:scale(1);}
-}
-
-#banner .container-fluid img{
-    height:150px;
-    width: 150px;
-    position: relative;
-    margin-bottom: -4em;
-    top:7em;
-    animation:zoom 2s;
-    animation-delay:2s;
-    transition:all ease-in-out 0.5s;
-}
-
-#banner .container-fluid img:hover{
-    transform:scale(2);
-}
-
-#banner .container-fluid .jumbotron{
-    background-color:transparent;
-    margin:0;
-}
-
-#banner .container-fluid .jumbotron h1{
-    font-family:'lato';
-    color:black;
-    text-align:center;
-    margin-top:2em;
-}
-
-#banner #personal-details h2{
-    font-family:lato;
-    color:black;
-}
-
-#banner #personal-details h3{      
-    color:black;
-    font-size:1.5em;
-    font-family:Pacifico;
-}
-
-#about{
-    overflow:hidden;
-    height:100vh;
-    background-image:url('images/promo.jpg');
-    background-attachment:fixed !important;
-    background-position:center;
-    background-repeat:no-repeat;
-    background-color:white;
-    background-size:cover;
-    /*background-color:#f7f7f7;*/
-    font-family:lato;
-    color: white;
-}
-
-#about .container-fluid{
-    height: 100vh;
-    margin: 0 0;
-}
-
-#about .container-fluid .jumbotron ,#contact .jumbotron, #other .jumbotron{
-    background-color:transparent;
-    margin:0;
-}
-
-#about .container-fluid p{
-    text-align:justify;
-    margin-bottom:2em;
-    text-indent:100px;
-    font-family: lato;
-}
-
-
-#contact{
-    background-color:#1B1B1B;
-    color:white;
-    padding-bottom:2em;
-    font-family:lato;
-}
-
-#contact h3{
-    font-family:'Century Gothic';
-}
-
-#contact a{
-    color:white;
-}
-
-#contact #social-network ul{
-    list-style-type:none;
-   
-}
-
-#contact #social-network ul li{
-    margin:0 0.5em;
-    display:inline;
-    float:left;
-}
-
-#contact #social-network img{
-    height:50px;
-    width:50px;
-    padding:10px;
-    
-}
-
-#gallery {
-    padding-bottom:10em ;
-    overflow: hidden;
-    background-image:url('images/design-bg.png');
-    background-attachment: fixed;
-}
-
-
-
-#gallery img{
-    margin:2em 0;
-    height:300px;
-    width:300px;    
-}
-
-#gallery .jumbotron{
-    background-color:transparent;
-    font-family:lato;
-}
-
-
-
-#gallery #magnify{
-    position:absolute;
-    width:60%;
-    background-color:#333;
-    margin-left:20%;
-    height:60%;
-    margin-top:20%;
-    opacity:0.7;
-    transform:scale(0);
-    transition:all ease-in-out 1s;
-    color:white;
-    cursor:pointer;
-}
-
-#gallery #image:hover #magnify{
-    transform:scale(1);
-}
-
-
-
-#window{
-    position:fixed;
-    overflow: hidden;
-    z-index:6;
-    width:80%;
-    margin-left:10%;
-    height:95%;
-    top:2.5%;
-    transform:scale(0);
-    background-color:white;
-    background-size:cover;
-    background-image:none;
-    background-position:top;
-    background-repeat:no-repeat;
-    transition:all ease-in-out 1s;
-    box-shadow:0 0 100px black;
-}
-
-#window #zoomer img{
-    margin-left:10%;
-    height:80vh;
-    width:80%;
-    position:relative;
-    box-shadow:0 0 20px black;    
-	border-top-left-radius: 3px;
-	border-bottom-right-radius: 3px;
-}
-
-#window #explanation{
-    padding:4em 4em;
-    box-sizing:border-box;
-    font-family:Josefin Slab;
-    font-size:1.5em;
-}
-
-#views{
-    height:70vh;
-    overflow-x: hidden;
-    width:100%;
-    background-image: url('images/views.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: left;
-}
-
-#views h2{
-    color:white;
-    font-family: pacifico;
-    font-size: 4em;
-}
-
-#views span{
-    color:white;
-    font-size: 5em;
-    margin-top: 40%;
-}
-
-#testimonials{
-    overflow: hidden;
-    background-image:url('images/testimony.jpg');
-    background-attachment:fixed;
-    background-position:bottom;
-    background-size:cover;
-    background-repeat:no-repeat;
-}
-
-#testimonials .jumbotron{
-    background-color:transparent;
-    color:black;
-    font-family: montez;
-    font-size: 2.2em;
-    margin:0;
-}
-
-#testimonials .jumbotron h2{
-    letter-spacing: 10px;
-}
-
-#testimonials .testimony{
-    margin:2em 0;
-}
-
-#testimonials .testimony .content{
-    background-color:mintcream;
-    padding:2em 2em;
-    box-border:border-box;
-    border-radius:5px;
-    text-align:justify;
-    opacity:0.78;
-    font-family:dancing script;
-    font-size:1.2em;
-}
-
-#testimonials .testimony .content img{
-    margin:1em 0;
-}
-
-#other{
-    font-family: lato;
-    padding:3em 1em;
-    box-sizing: border-box;
-    background-color: #f7f7f7;
-    background-image: url('images/other.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-}
-
-#other iframe{
-    margin: 2em 0;
-}
-
-footer{
-    color:white;
-    text-align:center;
-    background-color:black;
-    height:50px;
-    padding:15px;
-    box-border:border-box;
-    font-family:'Century Gothic';
-    margin:-1em 0;
-}
-
-@media screen and (max-width:768px)
-{
-    #banner{
-        height: auto;        
-        padding-bottom: 10em;
-    }
-
-    #banner .jumbotron h1{
-        text-align:justify;
-        font-size:2.8em;
-        margin-top:5em;
-    }
-
-    #banner .container-fluid img{
-        height:120px;
-        width: 120px;
-        position: relative;
-        margin-bottom: 0;
-        top:8em;    
-    }   
-
-   #about{
-        background-position-x:0;
-        background-position-y:0; 
-	background-attachment:fixed !important;
-    }
-
-    #banner #personal-details img{
-        height:250px;
-        width:350px;
-    }
-
-    #banner #personal-details h2{
-       font-size:2em;
-    }
-
-    #banner #personal-details h3{
-       font-size:1em;
-    }
-
-    #window #zoomer img{
-        margin-left:0;
-        height:70%;
-        width:70%;
-        position:relative;
-        box-shadow:0 0 20px black;
-    }
-
-    #views{
-        height: 80vh;
-    	background-position-x:-10em;
-    	padding:6em 1em;
-    	box-sizing:border-box;
-    }
-
-	#window #explanation{
-    	font-size:1em;
-        padding: 2em 2em;
-    }
-   
-
-    #views h2{
-        font-size: 2em;
-    }
-
-    #contact{
-        overflow:hidden;
-    }
-
-    #contact #message p{
-        text-align:justify;
-    }
-
-    #contact #social-network ul{
-        width:50%;
-        margin-left:25%;
-        position:relative;
-    }
-
-    #testimonials .jumbotron h2{
-        font-size:1em;
-        letter-spacing: 0;
-    }
-
-    #contact .jumbotron h2{
-        font-size:1.5em;
-    }
-
-    #contact  h3{
-        font-size:1.3em;
-    }
-
-    #contact  p{
-        font-size:1em;
-    }
-    #other{
-        background-image: url('images/other1.jpg');
-    }
-}
-
-@media screen and (max-width: 650px)
-{
-    #about{
-        background-position-x:0;
-    }
-}
-
-
-@media screen and (max-width:550px)
-{
-    #contact #social-network ul{
-       width:100%;
-       margin-left:17%;
-       position:relative;
-       padding:0;
-    }
-   #about{
-    background-position-x:-10em;
-}
-    #window #zoomer img{
-        margin-left:0;
-        height:70%;
-        width:70%;
-        position:relative;
-        box-shadow:0 0 20px black;
-    }
-
-    #testimonials .testimony .content img{
-        height:100px;
-        width:100px;
-    }
-
-    footer{
-        height:70px;
-    }
-}
-
-@media screen and (max-width: 320px)
-{
-
-    #banner .container-fluid img{
-        height:100px;
-        width: 100px;
-        position: relative;
-        margin-bottom:-2em;
-        top:5em;
-    }
-
-    #banner .container-fluid .jumbotron h1{
-        font-size: 2em;
-    }
-
-    #banner #personal-details h2{
-        font-size: 1.2em;
-    }
-
-    #banner #personal-details h3{
-        font-size: 1em;
-    }
-
-    #window #explanation{
-        font-size: 0.8em;
-        padding:1em 2em;
-    }
-
-}
-
-@media screen and (max-width: 240px)
-{
-
-    #about .container-fluid p{
-        font-size: 0.8em;
-        text-indent: 50px
-    }
-
-    #banner .container-fluid img{
-        height:100px;
-        width: 100px;
-        position: relative;
-        margin-bottom:0;
-        top:5em;
-    }
-
-    #banner .container-fluid .jumbotron h1{
-        font-size: 1em;
-        margin-bottom: -2em;
-    }
-
-    #banner #personal-details h2{
-        font-size: 0.8em;
-    }
-
-    #banner #personal-details h3{
-        font-size: 0.7em;
-    }
-
-    #window #explanation{
-        font-size: 0.5em;
-        padding: 1em 2.5em;
-    }
-
+from{
+		background-position-y:0; 
+	}to{
+		background-position-y: -400px; 
+		background-position-x: -400px;
+	}
 }
